Batch update API for org settings
POST /v3/organizations/{orgId}/settings

[
    { "name1": "value1" },
    { "name2": "value2" },
    ...
]
